Changed submodules to my own forked repos

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/buildroot/buildroot.git
 [submodule "lvgl_app/lvgl"]
 	path = lvgl_app/lvgl
-	url = https://github.com/littlevgl/lvgl.git
+	url = https://github.com/kaythe/lvgl.git
 [submodule "lvgl_app/lv_drivers"]
 	path = lvgl_app/lv_drivers
-	url = https://github.com/littlevgl/lv_drivers.git
+	url = https://github.com/kaythe/lv_drivers.git
